--- a/.github/workflows/multi_triggers.yml
+++ b/.github/workflows/multi_triggers.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   system-info:
-    runs_on : ubuntu_lastest
+    runs-on : ubuntu_lastest
     steps:
       - name : running neofetch
         run: 
