--- a/.github/workflows/multi_triggers.yml
+++ b/.github/workflows/multi_triggers.yml
@@ -12,7 +12,14 @@ on:
 jobs:
   system-info:
     runs-on : ubuntu-latest
+
+    
     steps:
+
+     # Install neofetch (required)
+      - name: Install neofetch
+        run: sudo apt-get update && sudo apt-get install -y neofetch
+        
       - name : running neofetch
         run: 
           neofetch
